# vechord

./: .gitignore  Dockerfile  Makefile  README.md  build.envd  design.md  pyproject.toml  test.py
.github/workflows/: check.yml  codeql.yml  pages.yml  release.yml
docs/source/: api.md  conf.py  example.md  guide.md  index.md  utils.md
examples/: anthropic.py  basic.py  beir.py  contextual.py  decorator.py  dynamic.py  essay.py  gemini.py  graph.py  hybrid.py  simple.py  web.py
tests/: conftest.py  test_errors.py  test_groundtruth.py  test_run.py  test_service.py  test_spec.py  test_table.py
vechord/: __init__.py  augment.py  chunk.py  cli.py  client.py  config.py  embedding.py  entity.py  errors.py  evaluate.py  extract.py  graph.py  groundtruth.py  load.py  loader.py  log.py  main.py  model.py  pipeline.py  provider.py  registry.py  rerank.py  segment.py  service.py  spec.py  text.py  utils.py
vechord/model/: __init__.py  gemini.py  internal.py  jina.py  llamacloud.py  voyage.py  web.py
